    Se opta por cambiar la orientación del juego a vertical, se aprovecha mucho mejor el espacio.
    El espacio para la UI es un problema, hay que simplificar la interfaz y el número de espacios que se
    pueden pulsar planteados.
    Creación del tilemap del primer nivel en Tiled, y renderizado con éxito.
    Falta la capa de objetos del Tiled.
13/01/23
    Se elimina InputHandler, al menos por ahora. Demasiado caos de clases.
    Nueva clase: LevelCreator. Gestiona la carga de cada mapa y parsea la capa de objetos de
    los mapas del Tiled.
    Se replantean algunos conceptos del juego. Las colisiones entre unidades limitan el diseño,
    se deshechan. Ahora puedo añadir torres que reduzcan la velocidad de los enemigos sin preocuparme por
    que se hagan bodyblocking entre ellos.
17/01/23
    Reestructuración del mapa en el Tiled. Organización de las capas de objetos, ajustados los hitbox.
    Definición de las clases de enemigos, de la clase Tile, Direction y Type.
    Definición de la clase Tower, pero le falta trabajo.
    Se crea la clase Debuff para gestionar estados especiales que las torres ponen en los enemigos.
    Definición clase Stats para guardar variables útiles.
    Se hace una primera prueba básica del funcionamiento del juego con un solo enemigo
    y sin torres, ¡funciona!
18/01/23
    Los enemigos ya son capaces de navegar el nivel siguiendo el camino sin mayor problema.
    Probando la velocidad de los enemigos hasta encontrar el balance correcto.
    Hay que hacer limpieza del código, las variables están en público y privado sin mucho sentido.
    Los proyectiles de las torres presentan un nuevo desafío. Debo pensar como plantearlo.
23/01/23
    Spritesheets para todos los enemigos.
    Nueva clase WaveManager para gestionar comodamente las oleadas.
    Los enemigos ahora desaparecen al llegar al final del nivel.
    Limpieza general de código en las clases de Enemy y derivadas.