@@ -1,8 +1,23 @@
 package com.mygdx.actors.towers;
 
-public class ArrowTower extends Tower{
+import static com.mygdx.helpers.Stats.ARROW_TOWER;
 
-    ArrowTower(float x, float y, int ID) {
-        super(x, y, ID);
+import com.mygdx.actors.tiles.Tile;
+import com.mygdx.gameworld.World;
+
+/**
+ * Esta clase gestiona las propiedades de la Tower Arrowtower
+ */
+public class ArrowTower extends Tower{
+    public ArrowTower (World world, Tile fundation){
+        super(world, fundation);
+
+        this.ID = 0;
+        this.damage = ARROW_TOWER.damage;
+        this.range = ARROW_TOWER.range;
+        this.price = ARROW_TOWER.price;
+        this.fireRate = ARROW_TOWER.fireRate;
+        this.projectileSpeed = ARROW_TOWER.projectileSpeed;
+        this.debuff = ARROW_TOWER.debuff;
     }
 }
